# defang_api

./: .gitignore  Dockerfile  MANIFEST.in  README.md  docker-compose-tests.yaml  docker-compose.yaml  pyproject.toml  requirements.txt  setup.cfg  tox.ini
.github/workflows/: pypublish.yaml  pythonpublish.yaml
src/defang_api/: __init__.py  servelocal.py
src/defang_api/helpers/: helpers.py  parsers.py
tests/: Dockerfile  __init__.py  conftest.py  test_placeholder.py
