[metadata]
name = defang_api
version = 0.0.1-dev1
description = Example defang API Server
long_description = file: README.md
long_description_content_type = text/markdown
keywords = defang
license = BSD-derived (http://www.repoze.org/LICENSE.txt)
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Topic :: Software Development :: Build Tools
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
url = https://github.com/zpriddy/defang_api
project_urls =
    Bug Tracker = https://github.com/zpriddy/defang_api/issues
    Blog = https:/zpriddy.com
    Source Code = https://github.com/zpriddy/defang_api/
author = Zachary Priddy
author_email = py@zpriddy.com

[options]
package_dir=
    =src
packages=find:
python_requires = >=3.7
install_requires =
    Flask
    flask_restful
    flask_restplus
deps =
    -e git+https://zpriddy@bitbucket.org/zpriddy/defang.git#egg=defang

[options.entry_points]
console_scripts =
    defang-server = defang_api.servelocal:run

[options.packages.find]
where=src


[options.extras_require]
testing =
    pytest
    pytest-cov
    coverage

[bdist_wheel]
universal=0

[tool:pytest]
#ignore=tests/
python_files = test_*.py
testpaths =
    tests
#addopts = -W always --cov --cov-report=term-missing
